--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -44,5 +44,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: .output/public # The folder the action should deploy.
+          folder: dist # The folder the action should deploy.
           token: ${{ secrets.ACCESS_TOKEN }}
