--- a/.github/workflows/nuxtjss.yml
+++ b/.github/workflows/nuxtjss.yml
@@ -43,6 +43,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
+          branch: gh-pages # The branch the action should deploy to.
           folder: .output/public # The folder the action should deploy.
-          TOKEN: ${{ secrets.TOKEN }}
-          BRANCH: gh-pages
+          token: ${{ secrets.TOKEN }}
