--- a/.github/workflows/nuxtjss.yml
+++ b/.github/workflows/nuxtjss.yml
@@ -45,4 +45,4 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: .output/public # The folder the action should deploy.
-          token: ${{ secrets.TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
