--- a/.github/workflows/nuxtjss.yml
+++ b/.github/workflows/nuxtjss.yml
@@ -21,7 +21,7 @@ permissions:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: 'containers'
+  group: 'pages'
   cancel-in-progress: false
 
 jobs:
@@ -34,12 +34,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+          cache: yarn
+          cache-dependency-path: './yarn.lock'
       - name: Install dependencies
         run: yarn install
       - name: Static HTML export with Nuxt
         run: yarn run generate
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: .output/public # The folder the action should deploy.
