--- a/.github/workflows/nuxtjss.yml
+++ b/.github/workflows/nuxtjss.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Static HTML export with Nuxt
         run: yarn run generate
       - name: Rename file 
-        run: mv .output/public/_nuxt .output/public/_nuxt/nuxt
+        run: mv .output/public/_nuxt/* .output/public/_nuxt/nuxt/
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
