--- a/.github/workflows/nuxtjss.yml
+++ b/.github/workflows/nuxtjss.yml
@@ -42,7 +42,8 @@ jobs:
         run: yarn run generate
       - name: Rename file 
         run: |
-          mv .output/public/_nuxt .output/public/_nuxt_temp
+          mkdir .output/public/_nuxt_temp
+          mv .output/public/_nuxt/* .output/public/_nuxt_temp/
           mkdir .output/public/_nuxt/nuxt
           mv .output/public/_nuxt_temp/* .output/public/_nuxt/nuxt/
       - name: Deploy
