--- a/.github/workflows/nuxtjss.yml
+++ b/.github/workflows/nuxtjss.yml
@@ -41,7 +41,9 @@ jobs:
       - name: Static HTML export with Nuxt
         run: yarn run generate
       - name: Replace
-        run: mv .output/public/nuxt/* .output/public/
+        run: |
+          mv .output/public/nuxt/* .output/public/
+          cp .output/public/index.html .output/public/nuxt/index.html
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
