변경사항 적용

--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "devDependencies": {
     "@invictus.codes/nuxt-vuetify": "^0.3.0",
     "@nuxt/devtools": "latest",
+    "@nuxthq/ui": "^2.6.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@pinia/nuxt": "^0.4.11",
     "@types/node": "^18.16.19",
     "nuxt": "^3.6.3",
+    "nuxt-icon": "^0.4.2",
+    "nuxt-lodash": "^2.5.0",
     "nuxt-typed-router": "^3.2.5"
   },
   "dependencies": {
-    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
-    "@pinia/nuxt": "^0.4.11",
     "broadcast-channel": "^5.1.0",
-    "nuxt-lodash": "^2.5.0",
-    "sass": "^1.63.6",
-    "vuetify": "^3.3.8"
+    "sass": "^1.63.6"
   }
 }
